--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <thead>
                             <tr>
                             <th scope="col">Date</th>
+                            <th scope="col"></th>
                             <th scope="col">School</th>
                             <th scope="col">Location</th>
                             </tr>
@@ -54,21 +55,25 @@
                         <tbody>
                             <tr>
                             <th scope="row">Sept 21</th>
+                            <td><img src="Wisconsin.png"></td>
                             <td>Wisconsin</td>
                             <td>Madison, WI</td>
                             </tr>
                             <tr>
                             <th scope="row">Oct 12</th>
+                            <td><img src="Illinois-Block.png"></td>
                             <td>Illinois</td>
                             <td>Ann Arbor, MI</td>
                             </tr>
                             <tr>
                             <th scope="row">Nov 16</th>
+                            <td><img src="Michigan-State.png"></td>
                             <td>Michigan State</td>
                             <td>Lansing, MI</td>
                             </tr>
                             <tr>
                             <th scope="row">Nov 30</th>
+                            <td><img src="ohio_state_logo.png"></td>
                             <td>Ohio State</td>
                             <td>Columbus, OH</td>
                             </tr>
